<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
       <string name="waitingDialogTitle">Current Call</string>
       <string name="waitingDialogContextFirst">Hold current call and answer</string>
       <string name="waitingDialogContextSecond">End current call and answer</string>
    <string name="phoneAppLabel" product="default">Phone</string>
    <string name="inCallLabel" translatable="false">InCallUI</string>
    <string name="onHold">ON HOLD</string>
    <string name="unknown">Unknown Number</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Payphone</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call dropped</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace wild character with</string>
    <string name="caller_manage_header">Conference call <xliff:g id="conf_call_time">%s</xliff:g></string>
    <string name="fake_phone_activity_phoneNumber_text" translatable="false">(650) 555-1234</string>
    <string name="fake_phone_activity_infoText_text" translatable="false">Incoming phone number</string>
    <string name="fake_phone_activity_placeCall_text" translatable="false">Fake Incoming Call</string>
    <string name="voicemail_settings_number_label">Voicemail number</string>
    <string name="card_title_dialing">Dialing</string>
    <string name="card_title_redialing">Redialing</string>
    <string name="card_title_conf_call">Conference call</string>
    <string name="card_title_incoming_call"></string>
    <string name="card_title_call_ended">Call ended</string>
    <string name="card_title_on_hold">On hold</string>
    <string name="card_title_hanging_up">Hanging up</string>
    <string name="card_title_in_call">In call</string>
    <string name="card_title_my_phone_number">My number is <xliff:g id="my_phone_number">%s</xliff:g></string>
    <string name="card_title_video_call_connecting">Connecting video</string>
    <string name="card_title_video_call">Video call</string>
    <string name="card_title_video_call_requesting">Requesting video</string>
    <string name="card_title_video_call_error">Can\'t connect video call</string>
    <string name="card_title_callback_number">Your callback number\n
        <xliff:g id="dark_number">%1$s</xliff:g>
    </string>
    <string name="card_title_callback_number_emergency">Your emergency callback number\n
        <xliff:g id="dark_number">%1$s</xliff:g>
    </string>
    <string name="notification_dialing">Dialing</string>
    <string name="notification_voice_mail">"Voicemail"</string>
    <string name="notification_missedCallTitle">Missed call</string>
    <string name="notification_missedCallsTitle">Missed calls</string>
    <string name="notification_missedCallsMsg"><xliff:g id="num_missed_calls">%s</xliff:g> missed calls</string>
    <string name="notification_missedCallTicker">Missed call from <xliff:g id="missed_call_from">%s</xliff:g></string>
    <string name="notification_ongoing_call">Ongoing call</string>
    <string name="notification_on_hold">On hold</string>
    <string name="notification_incoming_call">Incoming call</string>
    <string name="notification_incoming_video_call">Incoming video call</string>
    <string name="notification_requesting_video_call">Incoming video request</string>
    <string name="notification_voicemail_title">New voicemail</string>
    <string name="notification_voicemail_title_count">New voicemail (<xliff:g id="count">%d</xliff:g>)</string>
    <string name="notification_voicemail_text_format">Dial <xliff:g id="voicemail_number">%s</xliff:g></string>
    <string name="notification_voicemail_no_vm_number">Voicemail number unknown</string>
    <string name="notification_network_selection_title">No service</string>
    <string name="notification_network_selection_text">Selected network (<xliff:g id="operator_name">%s</xliff:g>) unavailable</string>
    <string name="notification_action_answer">Answer</string>
    <string name="notification_action_end_call">Hang up</string>
    <string name="notification_action_answer_video">Video</string>
    <string name="notification_action_answer_voice">Voice</string>
    <string name="notification_action_accept">Accept</string>
    <string name="notification_action_dismiss">Dismiss</string>
    <string name="notification_missedCall_call_back">Call back</string>
    <string name="notification_missedCall_message">Message</string>
    <string name="incall_error_power_off">To place a call, first turn off Airplane mode.</string>
    <string name="incall_error_emergency_only">Not registered on network.</string>
    <string name="incall_error_out_of_service">Cellular network not available.</string>
    <string name="incall_error_no_phone_number_supplied">To place a call, enter a valid number.</string>
    <string name="incall_error_call_failed">Can\'t call.</string>
    <string name="incall_status_dialed_mmi">Starting MMI sequence\u2026</string>
    <string name="incall_error_supp_service_unknown">No SIM card found.</string>
    <string name="incall_error_supp_service_switch">Can\'t switch calls.</string>
    <string name="incall_error_supp_service_separate">Can\'t separate call.</string>
    <string name="incall_error_supp_service_transfer">Can\'t transfer.</string>
    <string name="incall_error_supp_service_conference">Can\'t conference.</string>
    <string name="incall_error_supp_service_reject">Can\'t reject call.</string>
    <string name="incall_error_supp_service_hangup">Can\'t release call(s).</string>
    <string name="incall_call_type_label_sip">SIP call</string>
    <string name="emergency_enable_radio_dialog_title">Emergency call</string>
    <string name="emergency_enable_radio_dialog_message">Turning on radio\u2026</string>
    <string name="emergency_enable_radio_dialog_retry">No service. Trying again\u2026</string>
    <string name="dial_emergency_error">Can\'t call. <xliff:g id="non_emergency_number">%s</xliff:g> is not an emergency number.</string>
    <string name="dial_emergency_empty_error">Can\'t call. Dial an emergency number.</string>
    <string name="dialerKeyboardHintText">Use keyboard to dial</string>
    <string name="overflowHoldMenuItemText">Hold call</string>
    <string name="overflowResumeMenuItemText">Resume call</string>
    <string name="overflowAddMenuItemText">Add call</string>
    <string name="overflowMergeMenuItemText">Merge calls</string>
    <string name="overflowSwapMenuItemText">Swap calls</string>
    <string name="onscreenHoldText">Hold</string>
    <string name="onscreenEndCallText">End</string>
    <string name="onscreenShowDialpadText">Dialpad</string>
    <string name="onscreenMuteText">Mute</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="onscreenMergeCallsText">Merge calls</string>
    <string name="onscreenSwapCallsText">Swap</string>
    <string name="onscreenManageCallsText">Manage calls</string>
    <string name="onscreenManageConferenceText">Manage conference call</string>
    <string name="onscreenAudioText">Audio</string>
    <string name="onscreenVideoCallText">Video call</string>
    <string name="onscreenChangeToVoiceText">Change to voice call</string>
    <string name="onscreenSwitchCameraText">Switch camera</string>
    <string name="onscreenPauseVideoText">Pause video</string>
    <string name="onscreenOverflowText">More options</string>
    <string-array name="absent_num" translatable="false">
        <item>ABSENT NUMBER</item>
        <item>ABSENTNUMBER</item>
    </string-array>
    <string name="voicemail_provider">Service</string>
    <string name="voicemail_settings">Setup</string>
    <string name="voicemail_number_not_set">&lt;Not set&gt;</string>
    <string name="other_settings">Other call settings</string>
    <string name="calling_via_template">Calling via <xliff:g id="provider_name">%s</xliff:g></string>
    <string name="incoming_via_template"></string>
    <string name="contactPhoto">contact photo</string>
    <string name="goPrivate">go private</string>
    <string name="selectContact">select contact</string>
    <string name="respond_via_sms_custom_message">Custom message...</string>
    <string name="custom_message_cancel">Cancel</string>
    <string name="custom_message_send">Send</string>
    <string name="description_target_answer">Answer</string>
    <string name="description_target_send_sms">Send SMS</string>
    <string name="description_target_decline">Decline</string>
    <string name="description_target_answer_video_call">Answer as video call</string>
    <string name="description_target_answer_audio_call">Answer as audio call</string>
    <string name="description_target_accept_upgrade_to_video_request">Accept video request</string>
    <string name="description_target_decline_upgrade_to_video_request">Decline video request</string>
    <string name="description_direction_up">Slide up for <xliff:g id="target_description" example="Unlock">%s</xliff:g>.</string>
    <string name="description_direction_left">"Slide left for <xliff:g id="target_description" example="Unlock">%s</xliff:g>.</string>
    <string name="description_direction_right">Slide right for <xliff:g id="target_description" example="Unlock">%s</xliff:g>.</string>
    <string name="description_direction_down">Slide down for <xliff:g id="target_description" example="Unlock">%s</xliff:g>.</string>
    <string name="voicemail_notification_vibrate_when_title" msgid="8731372580674292759">Vibrate</string>
    <string name="voicemail_notification_vibarte_when_dialog_title" msgid="8995274609647451109">Vibrate</string>
    <string name="voicemail_notification_ringtone_title">Sound</string>
    <string name="default_notification_description">Default sound (<xliff:g id="default_sound_title">%1$s</xliff:g>)</string>
    <string name="voicemail_notification_vibrate_when_default" translatable="false">never</string>
    <string-array name="voicemail_notification_vibrate_when_values" translatable="false">
        <item>always</item>
        <item>silent</item>
        <item>never</item>
    </string-array>
    <string name="ringtone_title" msgid="5379026328015343686">Phone ringtone</string>
    <string name="vibrate_on_ring_title">Vibrate when ringing</string>
    <string name="dial_pad_autocomplete">Dialpad autocomplete</string>
    <string name="preference_category_ringtone">Ringtone &amp; Vibrate</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="emergency_call_dialog_number_for_display">Emergency number</string>
    <string name="accept_incoming_and_disconnect_current">Accepting this call will end the current call.</string>
    <string name="voicemail_call_dialog_number_for_display">Voicemail</string>
    <string name="call_status_online">Online</string>
    <string name="call_status_onhold">On hold</string>
    <string name="call_status_dialing">Dialing</string>
    <string name="call_status_disconnecting">Disconnecting</string>
    <string name="call_status_disconnected">Disconnected</string>
    <string name="record_hw">Record</string>
    <string name="hold_hw">Hold</string>
    <string name="note_hw">Notepad</string>
    <string name="addcall_hw">Add call</string>
    <string name="merge_hw">Merge call</string>
    <string name="mute_hw">Mute</string>
    <string name="contact_hw">Contacts</string>
    <string name="swap_hw">Swap</string>
    <string name="calendar_hw">Calendar</string>
</resources>