<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
	<LinearLayout
	    android:id="@+id/up"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingLeft="15dp"
	    android:paddingTop="15dp"
	    android:paddingRight="15dp"
	    android:paddingBottom="10dp"
	    >
	    <Button
	        android:id="@+id/calendar_hw"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:background="#00000000"
	        android:drawableTop="@drawable/ic_calendar_hw"
	        android:text="@string/calendar_hw"
	        android:textColor="#ffffff"
	        android:textSize="@dimen/call_button_size" />
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1"
	    android:orientation="vertical"
	    android:visibility="gone"
	    >
	<Button 
	    android:id="@+id/record_hw"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="#00000000"
	    android:drawableTop="@drawable/ic_record_hw"
	    android:text="@string/record_hw"
	    android:textColor="#ffffff"
	    android:textSize="@dimen/call_button_size"
	    />
	    <TextView 
		 android:id="@+id/record_time"
	        	 android:layout_width="fill_parent"
	          android:layout_height="wrap_content"
	          android:textColor="#ff0000"
	          android:visibility="invisible"
	          android:gravity="bottom|center_horizontal"
	    	/>
	    </LinearLayout>
	    
	     <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        >
	    <ToggleButton 
	    android:id="@+id/hold_hw"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="#00000000"
	    android:drawableTop="@drawable/hw_hold_background"
	    android:textOn="@string/hold_hw"
	    android:textOff="@string/hold_hw"
	    android:textColor="#ffffff"
	    android:textSize="@dimen/call_button_size"
	    android:layout_weight="1"
	    android:gravity="bottom|center_horizontal"
	   />
	   <Button 
	    android:id="@+id/swap_hw"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
            android:background="#00000000"
	    android:drawableTop="@drawable/ic_toolbar_swap"
	    android:text="@string/swap_hw"
	    android:textColor="#ffffff"
	    android:textSize="@dimen/call_button_size"
	    android:visibility="gone"
	    />
	</RelativeLayout>
	    <Button 
	    android:id="@+id/note_hw"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
            android:background="#00000000"
	    android:drawableTop="@drawable/ic_notepad_hw"
	    android:text="@string/note_hw"
	    android:textColor="#ffffff"
	    android:textSize="@dimen/call_button_size"
	    android:layout_weight="1"
	    />
		<Button
			android:id="@+id/call_transfer"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="#00000000"
			android:drawableTop="@drawable/ic_call_transfer"
			android:text="@string/menu_ect"
			android:textColor="#ffffff"
			android:textSize="@dimen/call_button_size"
			android:visibility="gone"
			/>
	  </LinearLayout>

	  <LinearLayout
	    android:id="@+id/below"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingLeft="15dp"
	    android:paddingTop="10dp"
	    android:paddingRight="15dp"
	    android:paddingBottom="15dp"
	    >

	 <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        >
	<Button 
	    android:id="@+id/addcall_hw"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
            android:background="#00000000"
	    android:drawableTop="@drawable/ic_add_call_hw"
	    android:text="@string/addcall_hw"
	    android:textColor="#ffffff"
	    android:textSize="@dimen/call_button_size"
	    />
	<Button 
	    android:id="@+id/merge_hw"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
             android:background="#00000000"
	    android:drawableTop="@drawable/ic_toolbar_merge"
	    android:text="@string/merge_hw"
	    android:textColor="#ffffff"
	    android:textSize="@dimen/call_button_size"
	    android:visibility="gone"
	    />
	</RelativeLayout>
	    <ToggleButton 
	    android:id="@+id/mute_hw"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="#00000000"
	    android:drawableTop="@drawable/hw_mute_background"
	    android:textOn="@string/mute_hw"
    	    android:textOff="@string/mute_hw"
	    android:textColor="#ffffff"
	    android:textSize="@dimen/call_button_size"
	    android:layout_weight="1"
	    android:gravity="bottom|center_horizontal"
	   />
	    <Button 
	    android:id="@+id/contact_hw"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
            android:background="#00000000"
	    android:drawableTop="@drawable/ic_see_contacts_hw"
	    android:text="@string/contact_hw"
	    android:textColor="#ffffff"
	    android:textSize="@dimen/call_button_size"
	    android:layout_weight="1"
	    />
	  </LinearLayout>
</LinearLayout>
